--- a/ArduinoNano.html
+++ b/ArduinoNano.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Arduino Nano - Placa Microcontroladora Compacta y Versátil</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
-        <button onclick="location.href='Stensa.html'">Inicio</button>
+        <button onclick="location.href='index.html'">Inicio</button>
     </header>
 
     <main>
