--- a/KitBasico.html
+++ b/KitBasico.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Kit Básico Minisumo - Promoción Especial</h1>
         <button onclick="location.href='PromocionesStensa.html'">← Volver a Promociones</button>
-        <button onclick="location.href='Stensa.html'">Inicio</button>
+        <button onclick="location.href='index.html'">Inicio</button>
     </header>
 
     <main>
