--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -10,7 +10,7 @@
         <h1 style="text-align:center;">Productos STENSA</h1>
     </header>
 
-    <button onclick="location.href='Stensa.html'">← Volver al Inicio</button>
+    <button onclick="location.href='index.html'">← Volver al Inicio</button>
 
     <main>
         <div class="productos">
