--- a/PromocionesStensa.html
+++ b/PromocionesStensa.html
@@ -8,13 +8,13 @@
 <body>
     <nav>
         <ul>
-            <li><a href="Stensa.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="ProductosStensa.html">Productos</a></li>
             <li><a href="PromocionesStensa.html">Promociones</a></li>
         </ul>
     </nav>
 
-    <button onclick="location.href='Stensa.html'">← Volver al Inicio</button>
+    <button onclick="location.href='index.html'">← Volver al Inicio</button>
 
     <main>
         <h1>Promociones Especiales por Kit Completo</h1>
