--- a/ESP32.html
+++ b/ESP32.html
@@ -9,7 +9,7 @@
     <header>
         <h1>ESP-32 - Módulo con WiFi y Bluetooth Integrado</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
-        <button onclick="location.href='Stensa.html'">Inicio</button>
+        <button onclick="location.href='index.html'">Inicio</button>
     </header>
 
     <main>
