--- a/Jumpers.html
+++ b/Jumpers.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Jumpers - Cables de Conexión para Proyectos Electrónicos</h1>
         <button onclick="location.href='ProductosStensa.html'"> Volver a Productos</button>
-        <button onclick="location.href='Stensa.html'">Inicio</button>
+        <button onclick="location.href='index.html'">Inicio</button>
     </header>
 
     <main>
