--- a/L293D.html
+++ b/L293D.html
@@ -9,7 +9,7 @@
     <header>
         <h1>L293D - Driver de Puente H para Motores DC y Paso a Paso</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
-        <button onclick="location.href='Stensa.html'">Inicio</button>
+        <button onclick="location.href='index.html'">Inicio</button>
     </header>
 
     <main>
