--- a/Llantas.html
+++ b/Llantas.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Llantas de Carrito de Juguete - Accesorios para Robots y Vehículos a Escala</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
-        <button onclick="location.href='Stensa.html'">Inicio</button>
+        <button onclick="location.href='index.html'">Inicio</button>
     </header>
 
     <main>
