--- a/KitBasico.html
+++ b/KitBasico.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Kit Básico - STENSA</title>
-    <link rel="stylesheet" href="Stensa.CSS">
+    <link rel="stylesheet" href="css/info.CSS">
 </head>
 <body>
     <header>
