--- a/Motorreductores.html
+++ b/Motorreductores.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Motorreductores Amarillos</title>
-    <link rel="stylesheet" href="Stensa.CSS">
+    <link rel="stylesheet" href="css/info.CSS">
 </head>
 <body>
     <header>
-        <h1>Motorreductores Amarillos - Control Preciso de Velocidad y Torque</h1>
+        <h1>Motorreductores Amarillos </h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </header>
