--- a/SensorUltrasonico.html
+++ b/SensorUltrasonico.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Sensor Ultrasónico</title>
-    <link rel="stylesheet" href="Stensa.CSS">
+    <link rel="stylesheet" href="css/info.CSS">
 </head>
 <body>
     <header>
-        <h1>Sensor Ultrasónico - Medición de Distancia</h1>
+        <h1>Sensor Ultrasónico </h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </header>
