--- a/ArduinoUno.html
+++ b/ArduinoUno.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Arduino UNO</title>
-    <link rel="stylesheet" href="Stensa.CSS">
+    <link rel="stylesheet" href="css/info.CSS">
 </head>
 <body>
     <header>
-        <h1>Arduino UNO - Placa Microcontroladora</h1>
+        <h1>Arduino UNO</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </header>
