--- a/Llantas.html
+++ b/Llantas.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Llantas de Carrito de Juguete</title>
-    <link rel="stylesheet" href="Stensa.CSS">
+    <link rel="stylesheet" href="css/info.CSS">
 </head>
 <body>
     <header>
-        <h1>Llantas de Carrito de Juguete - Accesorios para Robots y Vehículos a Escala</h1>
+        <h1>Llantas de Carrito de Juguete</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </header>
