--- a/SensorLuz.html
+++ b/SensorLuz.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Sensor de Luz</title>
-    <link rel="stylesheet" href="Stensa.CSS">
+    <link rel="stylesheet" href="css/info.CSS">
 </head>
 <body>
     <header>
-        <h1>Sensor de Luz - Detección de Niveles de Luz Ambiental</h1>
+        <h1>Sensor de Luz</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </header>
