--- a/index.html
+++ b/index.html
@@ -3,32 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio</title>
-    <link rel="stylesheet" href="estilos.css">
-</head>
-<body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="ProductosStensa.html">Productos</a></li>
-        </ul>
-    </nav>
+    <link rel="stylesheet" href="css/Stensa.css">
 
     <main>
         <h1>Bienvenido a STENSA</h1>
 
         <div class="imagen-principal">
-            <img src="minisumo.jpg" alt="Minisumo">
+            <img src="proyecto.Tics/minisumo_robot.png" alt="Minisumo Robot">
         </div>
 
         <section class="descripcion-principal">
             <p>El Minisumo es un pequeño robot de competición diseñado para participar en torneos de sumo robótico, donde el objetivo es sacar al oponente del ring usando estrategias y sensores.</p>
         </section>
 
-        <!---->
         <div class="botones-navegacion" style="margin-bottom: 20px;">
             <a href="ProductosStensa.html" class="boton">Ver Productos</a>
             <a href="PromocionesStensa.html" class="boton">Ver Promociones</a>
         </div>
+
+        <!-- Imagen agregada al final del main -->
+        <img src="proyecto.Tics/partedeabajo.png" alt="Parte de abajo" class="imagen-inferior">
 
     </main>
 </body>
