--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Inicio</title>
+    <link rel="stylesheet" href="css/Stensa.css">
+</head>
+<body>
+    <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="ProductosStensa.html">Productos</a></li>
