--- a/PromocionesStensa.html
+++ b/PromocionesStensa.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Promociones - STENSA</title>
-    <link rel="stylesheet" href="css/promo.CSS">
+    <link rel="stylesheet" href="css/promo.CSS" />
 </head>
 <body>
     <nav>
@@ -21,24 +21,30 @@
 
         <div class="promociones-lista">
             <article class="promocion">
-                <h3><a href = "KitBasico.html">Kit Básico Minisumo<a></h3>
-                <p>Incluye Arduino UNO, motores N20, driver L298N y accesorios esenciales.</p>
-                <p class="precio">Precio especial: Q385 GTQ</p>
-                <button>Comprar Kit</button>
+                <a href="KitBasico.html" class="enlace-promocion">
+                    <h3>Kit Básico Minisumo</h3>
+                    <p>Incluye Arduino UNO, motores N20, driver L298N y accesorios esenciales.</p>
+                    <p class="precio">Precio especial: Q385 GTQ</p>
+                    <button type="button" onclick="location.href='KitBasico.html'">Comprar Kit</button>
+                </a>
             </article>
 
             <article class="promocion">
-                <h3><a href = "KitAvanzado.html">Kit Avanzado Minisumo<a></h3>
-                <p>Todo el Kit Básico más sensor ultrasónico y llantas de carrito de juguete.</p>
-                <p class="precio">Precio especial: Q800 GTQ</p>
-                <button>Comprar Kit</button>
+                <a href="KitAvanzado.html" class="enlace-promocion">
+                    <h3>Kit Avanzado Minisumo</h3>
+                    <p>Todo el Kit Básico más sensor ultrasónico y llantas de carrito de juguete.</p>
+                    <p class="precio">Precio especial: Q800 GTQ</p>
+                    <button type="button" onclick="location.href='KitAvanzado.html'">Comprar Kit</button>
+                </a>
             </article>
 
             <article class="promocion">
-                <h3><a href = "KitProfesional.html">Kit Profesional Minisumo<a></h3>
-                <p>Incluye Kit Avanzado, motorreductores amarillos y sensores adicionales.</p>
-                <p class="precio">Precio especial: Q1,200 GTQ</p>
-                <button>Comprar Kit</button>
+                <a href="KitProfesional.html" class="enlace-promocion">
+                    <h3>Kit Profesional Minisumo</h3>
+                    <p>Incluye Kit Avanzado, motorreductores amarillos y sensores adicionales.</p>
+                    <p class="precio">Precio especial: Q1,200 GTQ</p>
+                    <button type="button" onclick="location.href='KitProfesional.html'">Comprar Kit</button>
+                </a>
             </article>
         </div>
     </main>
