--- a/ESP32.html
+++ b/ESP32.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - ESP-32</title>
-    <link rel="stylesheet" href="css/info.CSS">
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
     <header>
-        <h1>ESP-32</h1>
+        <h1>ESP-32 - Módulo con WiFi y Bluetooth Integrado</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </header>
@@ -48,5 +48,7 @@
             <button>Comprar ESP-32</button>
         </section>
     </main>
+    <script src="carrito.js"></script>
+
 </body>
 </html>
