--- a/KitAvanzado.html
+++ b/KitAvanzado.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Kit Avanzado - STENSA</title>
-    <link rel="stylesheet" href="css/info.CSS">
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
     <header>
@@ -47,5 +47,7 @@
             <button>Comprar Kit Avanzado</button>
         </section>
     </main>
+    <script src="carrito.js"></script>
+
 </body>
 </html>
