--- a/KitBasico.html
+++ b/KitBasico.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Kit Básico - STENSA</title>
-    <link rel="stylesheet" href="css/info.CSS">
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
     <header>
@@ -45,5 +45,7 @@
             <button>Comprar Kit Básico</button>
         </section>
     </main>
+    <script src="carrito.js"></script>
+
 </body>
 </html>
