--- a/KitProfesional.html
+++ b/KitProfesional.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang = "es">
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Kit Profesional - STENSA</title>
-    <link rel="stylesheet" href="css/info.CSS">
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
     <header>
@@ -48,5 +48,6 @@
             <button>Comprar Kit Profesional</button>
         </section>
     </main>
+    <script src="carrito.js"></script>
 </body>
 </html>
