--- a/L293D.html
+++ b/L293D.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - L293D</title>
-    <link rel="stylesheet" href="css/info.CSS">
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
     <header>
-        <h1>L293D </h1>
+        <h1>L293D - Driver de Puente H para Motores DC y Paso a Paso</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </header>
@@ -46,5 +46,7 @@
             <button>Comprar L293D</button>
         </section>
     </main>
+    <script src="carrito.js"></script>
+
 </body>
 </html>
