--- a/L298N.html
+++ b/L298N.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - L298N</title>
-    <link rel="stylesheet" href="css/info.CSS">
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
     <header>
-        <h1>L298N</h1>
+        <h1>L298N - Driver de Motores</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </header>
@@ -49,8 +49,12 @@
 
         <section>
             <h2>Comprar</h2>
-            <button>Comprar L298N</button>
+            <!-- Botón con id para seleccionar fácilmente -->
+            <button id="btnComprar">Comprar L298N</button>
         </section>
     </main>
+
+    <<script src="carrito.js"></script>
+
 </body>
 </html>
