--- a/SensorLuz.html
+++ b/SensorLuz.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Sensor de Luz</title>
-    <link rel="stylesheet" href="css/info.CSS">
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
     <header>
-        <h1>Sensor de Luz</h1>
+        <h1>Sensor de Luz - Detección de Niveles de Luz Ambiental</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </header>
@@ -46,5 +46,7 @@
             <button>Comprar Sensor de Luz</button>
         </section>
     </main>
+    <script src="carrito.js"></script>
+
 </body>
 </html>
