--- a/ArduinoNano.html
+++ b/ArduinoNano.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Arduino Nano</title>
-    <link rel="stylesheet" href="css/info.CSS">
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
     <header>
-        <h1>Arduino Nano</h1>
+        <h1>Arduino Nano - Placa Microcontroladora Compacta y Versátil</h1>
         <button onclick="location.href='ProductosStensa.html'">← Volver a Productos</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </header>
@@ -50,5 +50,7 @@
             <button>Comprar Arduino Nano</button>
         </section>
     </main>
+    <script src="carrito.js"></script>
+
 </body>
 </html>
