--- a/Jumpers.html
+++ b/Jumpers.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle del Producto - Jumpers</title>
-    <link rel="stylesheet" href="css/info.CSS">
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
     <header>
-        <h1>Jumpers</h1>
+        <h1>Jumpers - Cables de Conexión para Proyectos Electrónicos</h1>
         <button onclick="location.href='ProductosStensa.html'"> Volver a Productos</button>
         <button onclick="location.href='index.html'">Inicio</button>
     </header>
@@ -46,5 +46,7 @@
             <button>Comprar Jumpers</button>
         </section>
     </main>
+    <script src="carrito.js"></script>
+
 </body>
 </html>
