--- a/PromocionesStensa.html
+++ b/PromocionesStensa.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Promociones - STENSA</title>
-    <link rel="stylesheet" href="css/promo.CSS" />
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <nav>
@@ -21,45 +21,28 @@
 
         <div class="promociones-lista">
             <article class="promocion">
-                <a href="KitBasico.html" class="enlace-promocion">
-                    <h3>Kit Básico Minisumo</h3>
-                    <p>Incluye Arduino UNO, motores N20, driver L298N y accesorios esenciales.</p>
-                    <p class="precio">Precio especial: Q385 GTQ</p>
-                </a>
-                <button type="button" onclick="miFuncionKitBasico()">Comprar Kit</button>
+                <h3><a href = "KitBasico.html">Kit Básico Minisumo<a></h3>
+                <p>Incluye Arduino UNO, motores N20, driver L298N y accesorios esenciales.</p>
+                <p class="precio">Precio especial: Q385 GTQ</p>
+                <button>Comprar Kit</button>
             </article>
 
             <article class="promocion">
-                <a href="KitAvanzado.html" class="enlace-promocion">
-                    <h3>Kit Avanzado Minisumo</h3>
-                    <p>Todo el Kit Básico más sensor ultrasónico y llantas de carrito de juguete.</p>
-                    <p class="precio">Precio especial: Q800 GTQ</p>
-                </a>
-                <button type="button" onclick="miFuncionKitAvanzado()">Comprar Kit</button>
+                <h3><a href = "KitAvanzado.html">Kit Avanzado Minisumo<a></h3>
+                <p>Todo el Kit Básico más sensor ultrasónico y llantas de carrito de juguete.</p>
+                <p class="precio">Precio especial: Q800 GTQ</p>
+                <button>Comprar Kit</button>
             </article>
 
             <article class="promocion">
-                <a href="KitProfesional.html" class="enlace-promocion">
-                    <h3>Kit Profesional Minisumo</h3>
-                    <p>Incluye Kit Avanzado, motorreductores amarillos y sensores adicionales.</p>
-                    <p class="precio">Precio especial: Q1,200 GTQ</p>
-                </a>
-                <button type="button" onclick="miFuncionKitProfesional()">Comprar Kit</button>
+                <h3><a href = "KitProfesional.html">Kit Profesional Minisumo<a></h3>
+                <p>Incluye Kit Avanzado, motorreductores amarillos y sensores adicionales.</p>
+                <p class="precio">Precio especial: Q1,200 GTQ</p>
+                <button>Comprar Kit</button>
             </article>
         </div>
     </main>
+    <script src="carrito.js"></script>
 
-    <script>
-        function miFuncionKitBasico() {
-            alert('Función personalizada para Comprar Kit Básico');
-            // Aquí pones la función real que quieras ejecutar
-        }
-        function miFuncionKitAvanzado() {
-            alert('Función personalizada para Comprar Kit Avanzado');
-        }
-        function miFuncionKitProfesional() {
-            alert('Función personalizada para Comprar Kit Profesional');
-        }
-    </script>
 </body>
 </html>
