--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="css/inicio.css" />
 </head>
 <body>
-  <!-- Menú de navegación -->
   <nav>
     <ul>
       <li><a href="index.html">Inicio</a></li>
@@ -39,8 +38,8 @@
   <!-- Carrito flotante oculto inicialmente -->
   <div id="carrito-flotante" aria-live="polite" aria-atomic="true" role="region"></div>
 
-  <!-- Imagen inferior fija y a lo ancho -->
-  <div class="imagen-inferior-fondo"></div>
+  <!-- Imagen inferior fija con etiqueta img -->
+  <img src="proyecto.Tics/partedeabajo.png" alt="Parte de abajo" class="imagen-inferior" />
 
   <script src="js/carrito.js"></script>
 </body>
