--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="ProductosStensa.html">Productos</a></li>
+            <!-- Opciones Inicio y Productos eliminadas para esta página -->
+            <!-- Puedes agregar otras opciones aquí si quieres -->
         </ul>
     </nav>
 
@@ -31,16 +31,12 @@
             <a href="PromocionesStensa.html" class="boton">Ver Promociones</a>
         </div>
 
-        <!-- Imagen inferior con efecto hover y tamaño grande -->
         <div class="imagen-hover-container">
             <img src="proyecto.Tics/partedeabajo.png" alt="Parte de abajo" />
         </div>
     </main>
 
-    <!-- Botón carrito flotante -->
     <button id="boton-carrito" aria-label="Mostrar carrito" title="Mostrar carrito">🛒</button>
-
-    <!-- Contenedor carrito flotante -->
     <div id="carrito-flotante" aria-live="polite" aria-atomic="true" role="region"></div>
 
     <script src="js/carrito.js"></script>
