--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             </p>
         </section>
 
-        <div class="botones-navegacion">
+        <!-- Botones "Ver Productos" y "Ver Promociones" -->
+        <div class="botones-navegacion" style="margin-bottom: 20px;">
             <a href="ProductosStensa.html" class="boton">Ver Productos</a>
             <a href="PromocionesStensa.html" class="boton">Ver Promociones</a>
         </div>
 
-        <div class="imagen-hover-container">
-            <img src="proyecto.Tics/partedeabajo.png" alt="Parte de abajo" />
-        </div>
+        <!-- Imagen agregada al final del main -->
+        <img src="proyecto.Tics/partedeabajo.png" alt="Parte de abajo" class="imagen-inferior">
     </main>
 
     <!-- Botón flotante del carrito -->
