--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Productos STENSA</title>
-    <link rel="stylesheet" href="Productos.css">
+    <link rel="stylesheet" href="css/Productos.css">
 </head>
 <body>
     <header>
@@ -16,84 +16,83 @@
         <div class="productos">
             <section class="producto">
                 <h2><a href="L298N.html">L298N</a></h2>
-                <img src="l298n.jpg" alt="L298N">
+                <img src="proyecto.Tics/L298N.png" alt="L298N">
                 <p>Driver para motores DC y paso a paso, ideal para controlar motores N20 con Arduino.</p>
                 <p class="precio">Precio: Q60 GTQ</p>
             </section>
 
             <section class="producto">
                 <h2><a href="ArduinoUno.html">Arduino UNO</a></h2>
-                <img src="arduino_uno.jpg" alt="Arduino UNO">
+                <img src="proyecto.Tics/arduinouno.png" alt="Arduino UNO">
                 <p>Placa de desarrollo microcontrolador basada en ATmega328P, perfecta para proyectos electrónicos.</p>
                 <p class="precio">Precio: Q150 GTQ</p>
             </section>
 
             <section class="producto">
                 <h2><a href="MotoresN20.html">Motores N20 - Motores DC Miniatura</a></h2>
-                <img src="motores_n20.jpg" alt="Motores N20">
+                <img src="proyecto.Tics/motoresn20.png" alt="Motores N20">
                 <p>Motores eléctricos compactos y eficientes, usados en robots y pequeños dispositivos.</p>
                 <p class="precio">Precio: Q80 GTQ</p>
             </section>
 
             <section class="producto">
-               <h2><a href="Jumpers.html">Jumpers - Cables de Conexión para Proyectos Electrónicos</a></h2>
-                <img src="jumpers.jpg" alt="Jumpers Macho Macho, Hembra Macho">
+                <h2><a href="Jumpers.html">Jumpers - Cables de Conexión para Proyectos Electrónicos</a></h2>
+                <img src="proyecto.Tics/jumpers.png" alt="Jumpers Macho Macho, Hembra Macho">
                 <p>Cables de conexión para protoboards y placas, esenciales para prototipos electrónicos.</p>
                 <p class="precio">Precio: Q70 GTQ</p>
             </section>
 
             <section class="producto">
                 <h2><a href="SensorUltrasonico.html">Sensor Ultrasónico</a></h2>
-                <img src="sensor_ultrasonico.jpg" alt="Sensor Ultrasónico">
+                <img src="proyecto.Tics/sensor.png" alt="Sensor Ultrasónico">
                 <p>Sensor para medir distancia mediante ondas ultrasónicas, común en robótica y automatización.</p>
                 <p class="precio">Precio: Q120 GTQ</p>
             </section>
 
             <section class="producto">
                 <h2><a href="Llantas.html">Llantas de carrito de juguete</a></h2>
-                <img src="llantas_carrito.jpg" alt="Llantas de carrito de juguete">
+                <img src="proyecto.Tics/llantas.png" alt="Llantas de carrito de juguete">
                 <p>Juego de llantas pequeñas ideales para robots y vehículos a escala.</p>
                 <p class="precio">Precio: Q90 GTQ</p>
             </section>
 
             <section class="producto">
-            <h2><a href="Motorreductores.html">Motorreductores amarillos</a></h2>
-            <img src="motorreductores_amarillos.jpg" alt="Motorreductores amarillos">
-            <p>Motorreductores compactos con carcasa amarilla, usados para control preciso de velocidad y torque.</p>
-            <p class="precio">Precio: Q20 GTQ</p>
+                <h2><a href="Motorreductores.html">Motorreductores amarillos</a></h2>
+                <img src="proyecto.Tics/motores.png" alt="Motorreductores amarillos">
+                <p>Motorreductores compactos con carcasa amarilla, usados para control preciso de velocidad y torque.</p>
+                <p class="precio">Precio: Q20 GTQ</p>
             </section>
 
-
             <section class="producto">
-                <h2><a href = "ArduinoNano.html">Arduino Nano</a></h2>
-                <img src="arduino_nano.jpg" alt="Arduino Nano">
+                <h2><a href="ArduinoNano.html">Arduino Nano</a></h2>
+                <img src="proyecto.Tics/arduinonano.png" alt="Arduino Nano">
                 <p>Placa microcontroladora pequeña y versátil, ideal para proyectos con espacio limitado.</p>
                 <p class="precio">Precio: Q125 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href = "ESP32.html">ESP-32<a></h2>
-                <img src="esp32.jpg" alt="ESP-32">
+                <h2><a href="ESP32.html">ESP-32</a></h2>
+                <img src="proyecto.Tics/esp.png" alt="ESP-32">
                 <p>Módulo potente con WiFi y Bluetooth integrado, perfecto para proyectos IoT y conectividad inalámbrica.</p>
                 <p class="precio">Precio: Q450 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href = "L293D.html">L293D<a></h2>
-                <img src="l293d.jpg" alt="L293D">
+                <h2><a href="L293D.html">L293D</a></h2>
+                <img src="proyecto.Tics/l293d.png" alt="L293D">
                 <p>Driver de puente H para controlar motores DC y paso a paso con facilidad y eficiencia.</p>
                 <p class="precio">Precio: Q20 GTQ</p>
             </section>
 
             <section class="producto">
-                <h2><a href = "SensorLuz.html">Sensor de luz<a></h2>
-                <img src="sensor_luz.jpg" alt="Sensor de luz">
+                <h2><a href="SensorLuz.html">Sensor de luz</a></h2>
+                <img src="proyecto.Tics/sensorluz.png" alt="Sensor de luz">
                 <p>Sensor que detecta niveles de luz ambiental, útil para automatización y proyectos de iluminación.</p>
                 <p class="precio">Precio: Q35 GTQ</p>
             </section>
         </div>
     </main>
-    <script src="carrito.js"></script>
 
+    <script src="carrito.js"></script>
 </body>
 </html>
